--- a/QO/Fundamentos/Introducao.org
+++ b/QO/Fundamentos/Introducao.org
@@ -290,7 +290,7 @@
 |------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | @@latex: \cellcolor{green!20} {\bfseries Cadeia fechada aromática}  @@                                           | @@latex: \cellcolor{green!20} {\bfseries Cadeia fechada alicíclica} @@                                                                                                                                                                                                |
 |------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Cadeia cíclica formada por 6 atomos de carbono alternados em simples e duplas ligação                            | Cadeia cíclica que não constitui anel benzênico                                                                                                                                                                                                                             |
+| Cadeia cíclica formada por 6 átomos de carbono alternados em simples e duplas ligação                        | Cadeia cíclica que não constitui anel benzênico                                                                                                                                                                                                                            |
 | @@latex: \chemfig{C*6((-)=C(-)-C(-)=C(-)-C(-)=C(-)-)} \quad ou  \chemfig{C*6((-)-C(-)=C(-)-C(-)=C(-)-C(-)=)}  @@ | @@latex: \chemfig{-[:320]C(-[:220])-[:60]C(-[:120])-[,,,,drn]C(-[:60])-[:300]C(-[:320])(-[:40])-[:240]C(-[:300])-[:180,,,,drn]C(-[:120]\phantom{C})-[:240]} \qquad \chemfig{-[:90]C(-[:180])-C(-[:270])(-)-[:90]C(-)(-[:90])-[:180]C(-[:270]\phantom{C})(-[:90])-[:180]} @@ |
 |                                                                                                                  |                                                                                                                                                                                                                                                                             |
 | Esses clicos recebem o nome de /benzeno/                                                                           |                                                                                                                                                                                                                                                                             |
